--- a/crud-grid.css
+++ b/crud-grid.css
@@ -1,3 +1,6 @@
+/*! crud-grid - v0.0.17 - 2014-09-24
+* https://github.com/flado/angular-crud-rest
+* Copyright (c) Florin.Adochiei@gmail.com 2014; Licensed MIT */
 table.crud-grid th:hover:not(:first-child) {
   cursor: pointer;
 }
